adding sfh logo

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
               <a href="https://www.storeforhumans.com/" target="_blank"><img class="thumbnail"
-                  src="assets/aPartThumb.png" /></a>
+                  src="assets/StoreForHumansLogo.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
             </div>
           </div>
