--- a/index.html
+++ b/index.html
@@ -133,12 +133,9 @@
               <img class="profilePic" src="assets/profilePic.png" />
               <h3>About Me</h3>
               <p>
-                Technical Writer turned Full-Stack Developer with a knack for
-                communicating information in creative and compelling ways.
-                Scientific background providing a strong foundation in
-                reasoning and problem-solving. Professional background
-                providing strong foundation in communication and teamwork.
-                Passion for coding, design, UI/UX, and creative thinking.
+
+                E-Commerce developer, Shopify store owner, and web designer. Immersed in Shopify/Liquid environment.
+                Full-stack capabilities with an emphasis on front-end, Javascript, visual design, UI/UX.
               </p>
               <ul>
                 <li>
