--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               <a href="https://www.storeforhumans.com/" target="_blank"><img class="thumbnail"
                   src="assets/StoreForHumansLogo.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
+              <p>This is a Shopify webstore that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
             </div>
           </div>
           <div>
@@ -104,6 +105,7 @@
               <a href="https://bhoff5.github.io/Word-Guess-Game/" target="_blank"><img class="thumbnail"
                   src="assets/islandthumb3.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
+              <p></p>
             </div>
           </div>
           <div>
