--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               <a href="https://www.storeforhumans.com/" target="_blank"><img class="thumbnail"
                   src="assets/StoreForHumansLogo.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
+              <br>
               <p>This is a Shopify webstore that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
             </div>
           </div>
@@ -105,7 +106,8 @@
               <a href="https://bhoff5.github.io/Word-Guess-Game/" target="_blank"><img class="thumbnail"
                   src="assets/islandthumb3.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
-              <p></p>
+              <br>
+              <p>This game was created as part of a homework assignment during my Software Developer Bootcamp. I created this game using HTML 5, CSS 3 and JavaScript.</p>
             </div>
           </div>
           <div>
@@ -117,6 +119,8 @@
               <a href="https://bhoff5.github.io/clicky-game/" target="_blank"><img class="thumbnail"
                   src="assets/freshwaterFishGameThumb.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
+              <br>
+              <p>This game was created as part of a homework assignment during my Software Developer Bootcamp. I created this game using HTML 5, CSS 3 and JavaScript.</p>
             </div>
           </div>
           <div>
@@ -128,6 +132,8 @@
               <a href="https://bhoff5.github.io/TriviaGame/" target="_blank"><img class="thumbnail"
                   src="assets/planetthumb.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
+              <br>
+              <p>This game was created as part of a homework assignment during my Software Developer Bootcamp. I created this game using HTML 5, CSS 3 and JavaScript.</p>
             </div>
           </div>
           <div>
