--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <div>
             <div class="pageText">
-              <h3>aPART App</h3>
+              <h3>Store for Humans</h3>
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
