--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   src="assets/StoreForHumansLogo.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
-              <p>This is a Shopify web store that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
+              <p>This was a Shopify web store that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
             </div>
           </div>
           <div>
