adding scroll arrow

--- a/index.html
+++ b/index.html
@@ -221,6 +221,15 @@
         </div>
       </div>
     </div>
+      <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon=""><svg width="43px" height="23px" viewBox="0 0 43 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <!-- Generator: Sketch 43.2 (39069) - http://www.bohemiancoding.com/sketch -->
+    <title>Combined Shape</title>
+    <desc>Created with Sketch.</desc>
+    <defs></defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <path d="M40.4428521,2.81996648e-14 L42.4014043,1.95855213 L21.4299782,22.9299782 L0.458552134,1.95855213 L2.41710427,-3.40838469e-14 L21.4299782,19.0128739 L40.4428521,2.74225087e-14 Z" id="Combined-Shape" fill="#375BB1"></path>
+    </g>
+</svg></a>
   </div>
   <script src="javascripts/application.js"></script>
   <script type="text/javascript">
