--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <desc>Created with Sketch.</desc>
     <defs></defs>
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <path d="M40.4428521,2.81996648e-14 L42.4014043,1.95855213 L21.4299782,22.9299782 L0.458552134,1.95855213 L2.41710427,-3.40838469e-14 L21.4299782,19.0128739 L40.4428521,2.74225087e-14 Z" id="Combined-Shape" fill="#375BB1"></path>
+        <path d="M40.4428521,2.81996648e-14 L42.4014043,1.95855213 L21.4299782,22.9299782 L0.458552134,1.95855213 L2.41710427,-3.40838469e-14 L21.4299782,19.0128739 L40.4428521,2.74225087e-14 Z" id="Combined-Shape" fill="black"></path>
     </g>
 </svg></a>
   </div>
