--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
       </div>
     </div>
-      <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon=""><svg width="43px" height="23px" viewBox="0 0 43 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <a class="ca3-scroll-down-link ca3-scroll-down-arrow" href="#catalog" data-ca3_iconfont="ETmodules" data-ca3_icon=""><svg width="43px" height="23px" viewBox="0 0 43 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <!-- Generator: Sketch 43.2 (39069) - http://www.bohemiancoding.com/sketch -->
     <title>Combined Shape</title>
     <desc>Created with Sketch.</desc>
