--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://www.storeforhumans.com/" target="_blank"><img class="thumbnail"
-                  src="assets/StoreForHumansLogo.png" /></a>
+              <a href="https://www.glob.land/" target="_blank"><img class="thumbnail"
+                  src="assets/globLogo.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
               <p>This was a Shopify web store that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
