Adding GL, Feltory, Glob pages to catalog

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                   <span></span>
                 </li>
                 <ul>
-                  <li>Store for Humans . . . . . . . . 2<span></span></li>
+                  <li>Graf Lantz . . . . . . . . 2<span></span></li>
+                  <li>Feltory . . . . . . . . 2<span></span></li>
+                  <li>Glob . . . . . . . . 2<span></span></li>
                   <li>Island Word Guess . . . . . . . 3<span></span></li>
                   <li>Freshwater Fish Game . . . . . . . 4<span></span></li>
                   <li>Planet Trivia . . . . . . . . . 5<span></span></li>
@@ -83,14 +85,14 @@
               <img class="thumbnail" src="assets/skills.png" />
             </div>
           </div>
-                    <div>
+           <div>
             <div class="pageText">
-              <h3>Test1</h3>
+              <h3>Graf Lantz</h3>
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://www.glob.land/" target="_blank"><img class="thumbnail"
-                  src="assets/globLogo.png" /></a>
+              <a href="https://www.graflantz.com/" target="_blank"><img class="thumbnail"
+                  src="assets/glLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
               <p>This was a Shopify web store that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
@@ -98,25 +100,26 @@
           </div>
           <div>
             <div class="pageText">
-              <h3>Test2</h3>
+              <h3>Feltory</h3>
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://bhoff5.github.io/Word-Guess-Game/" target="_blank"><img class="thumbnail"
-                  src="assets/islandthumb3.png" /></a>
+              <a href="https://www.feltory.com/" target="_blank"><img class="thumbnail"
+                  src="assets/feltoryLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
               <p>This game was created as part of a homework assignment during my Software Developer Bootcamp. I created this game using HTML 5, CSS 3 and JavaScript.</p>
             </div>
           </div>
           <div>
+           <div>
             <div class="pageText">
-              <h3>Store for Humans</h3>
+              <h3>Glob</h3>
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://www.storeforhumans.com/" target="_blank"><img class="thumbnail"
-                  src="assets/StoreForHumansLogo.png" /></a>
+              <a href="https://www.glob.land/" target="_blank"><img class="thumbnail"
+                  src="assets/globLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
               <p>This was a Shopify web store that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
