Adding copy for GL page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <img class="thumbnail" src="assets/skills.png" />
+              <img class="thumbnail" src="assets/skills2.png" />
             </div>
           </div>
           <div>
@@ -95,7 +95,7 @@
                   src="assets/glLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
-              <p>This was a Shopify web store that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
+              <p>Create and implement new website features, fix bugs, integrate third-party apps (such as Klaviyo, Yotpo, Nosto, etc.) for all brands. Manage all development projects with Asana. Use Script Editor to create Ruby discount scripts. Built Feltory store from scratch.</p>
             </div>
           </div>
           <div>
