Updating feature copy

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <div id="trr34" class="triangle-right-red triangle triangle-red ui-arrow-control ui-arrow-next-page"
             ignore="1"></div>
           <div class="myName" id="fullStack">
-            Full-Stack
+            Front-End
           </div>
           <div class="myName" id="developer">Developer</div>
         </div>
