testing links for table of contents

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div style="background-color:white;"></div>
           <!-- test -->
           <div>
-            <div class="pageText">
+            <div class="pageText" id="table-of-contents">
               <h3>Table of Contents</h3>
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
@@ -55,7 +55,7 @@
                   <span></span>
                 </li>
                 <ul>
-                  <li>Graf Lantz . . . . . . . . 2<span></span></li>
+                  <li><a>Graf Lantz . . . . . . . . 2</a></li>
                   <li>Feltory . . . . . . . . 2<span></span></li>
                   <li>Glob . . . . . . . . 2<span></span></li>
                   <li>Island Word Guess . . . . . . . 3<span></span></li>
