Updating GL copy

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   src="assets/glLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
-              <p>Create and implement new website features, fix bugs, integrate third-party apps (such as Klaviyo, Yotpo, Nosto, etc.) for all brands. Manage all development projects with Asana. Use Script Editor to create Ruby discount scripts. Built Feltory store from scratch.</p>
+              <p>I am the sole Web Developer for Graf Lantz, a high-end, LA-based retailer. I create and implement new website features, fix bugs, integrate third-party apps (such as Klaviyo, Yotpo, Nosto, etc.) for all brands. Manage all development projects with Asana. Use Script Editor to create Ruby discount scripts.</p>
             </div>
           </div>
           <div>
@@ -108,7 +108,7 @@
                   src="assets/feltoryLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
-              <p>This game was created as part of a homework assignment during my Software Developer Bootcamp. I created this game using HTML 5, CSS 3 and JavaScript.</p>
+              <p>Feltory is one of Graf Lantz's brands. I built the entire Feltory website from scratch, including building the custom Bundle Builder page.</p>
             </div>
           </div>
            <div>
@@ -121,7 +121,7 @@
                   src="assets/globLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
-              <p>This was a Shopify web store that I founded in 2020. I built the Shopify theme from scratch using Theme Kit and Liquid. All t-shirts designs are also made by me using Photoshop and Illustrator. </p>
+              <p>Glob is one of Graf Lantz's brands. I am responsible for updating and maintaining the Glob website, including building new features.</p>
             </div>
           </div>
           <div>
