--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <span></span>
                 </li>
                 <ul>
-                  <li><a>Graf Lantz . . . . . . . . 2</a></li>
+                  <li><a>Graf Lantz . . . . . . . . 2</a><span></span></li>
                   <li>Feltory . . . . . . . . 2<span></span></li>
                   <li>Glob . . . . . . . . 2<span></span></li>
                   <li>Island Word Guess . . . . . . . 3<span></span></li>
