Updating page numbers

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                   <span></span>
                 </li>
                 <ul>
-                  <li><a>Graf Lantz . . . . . . . . 2</a><span></span></li>
-                  <li>Feltory . . . . . . . . 2<span></span></li>
-                  <li>Glob . . . . . . . . 2<span></span></li>
-                  <li>Island Word Guess . . . . . . . 3<span></span></li>
-                  <li>Freshwater Fish Game . . . . . . . 4<span></span></li>
-                  <li>Planet Trivia . . . . . . . . . 5<span></span></li>
+                  <li>Graf Lantz . . . . . . . . 2<span></span></li>
+                  <li>Feltory . . . . . . . . 3<span></span></li>
+                  <li>Glob . . . . . . . . 4<span></span></li>
+                  <li>Island Word Guess . . . . . . . 5<span></span></li>
+                  <li>Freshwater Fish Game . . . . . . . 6<span></span></li>
+                  <li>Planet Trivia . . . . . . . . . 7<span></span></li>
                 </ul>
                 <li>
-                  Resume . . . . . . . . . . . . . . . . 6
+                  Resume . . . . . . . . . . . . . . . . 8
                   <span></span>
                 </li>
                 <li>
-                  About Me . . . . . . . . . . . . . . . . 6
+                  About Me . . . . . . . . . . . . . . . . 8
                   <span></span>
                 </li>
               </ul>
