--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://www.graflantz.com/" target="_blank"><img class="thumbnail"
+              <a href="https://www.graflantz.com/" target="_blank" class="thumbnail-link"><img class="thumbnail"
                   src="assets/glLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
@@ -104,7 +104,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://www.feltory.com/" target="_blank"><img class="thumbnail"
+              <a href="https://www.feltory.com/" target="_blank" class="thumbnail-link"><img class="thumbnail"
                   src="assets/feltoryLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
@@ -117,7 +117,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://www.glob.land/" target="_blank"><img class="thumbnail"
+              <a href="https://www.glob.land/" target="_blank" class="thumbnail-link"><img class="thumbnail"
                   src="assets/globLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
@@ -130,7 +130,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://bhoff5.github.io/Word-Guess-Game/" target="_blank"><img class="thumbnail"
+              <a href="https://bhoff5.github.io/Word-Guess-Game/" target="_blank" class="thumbnail-link"><img class="thumbnail"
                   src="assets/islandthumb3.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
@@ -143,7 +143,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://bhoff5.github.io/clicky-game/" target="_blank"><img class="thumbnail"
+              <a href="https://bhoff5.github.io/clicky-game/" target="_blank" class="thumbnail-link"><img class="thumbnail"
                   src="assets/freshwaterFishGameThumb.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
@@ -156,7 +156,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://bhoff5.github.io/TriviaGame/" target="_blank"><img class="thumbnail"
+              <a href="https://bhoff5.github.io/TriviaGame/" target="_blank" class="thumbnail-link"><img class="thumbnail"
                   src="assets/planetthumb.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
