--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <svg height="1px" width="100%">
                 <line x1="0" y1="50%" x2="100%" y2="50%" style="stroke:#56514873;stroke-width:1" />
               </svg>
-              <a href="https://www.graflantz.com/" target="_blank" class="thumbnail-link"><img class="thumbnail"
+              <a href="https://www.graflantz.com/" class="thumbnail-link"><img class="thumbnail"
                   src="assets/glLogoforPortfolio.png" /></a>
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
