--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
               <h3 class="gitLink">Click image above to open.</h3>
               <br>
               <p>I am the sole Web Developer for Graf Lantz, a high-end, LA-based retailer. I create and implement new website features, fix bugs, integrate third-party apps (such as Klaviyo, Yotpo, Nosto, etc.) for all brands. Manage all development projects with Asana. Use Script Editor to create Ruby discount scripts.</p>
+              <a href="https://www.google.com">this is a test link</a>
             </div>
           </div>
           <div>
