--- a/index.html
+++ b/index.html
@@ -716,9 +716,9 @@
 								<form id="tt-contact-form" class="tt-form-lg tt-form-minimal tt-hide-labels anim-fadeinup">
 
 									<!-- Begin hidden required fields (https://github.com/agragregra/uniMail) -->
-									<input type="hidden" name="project_name" value="yourwebsiteaddress.com"> <!-- Change value to your site name -->
-									<input type="hidden" name="admin_email" value="your@email.com"> <!-- Change value to your valid email address (where a message will be sent) -->
-									<input type="hidden" name="form_subject" value="Message from yourwebsiteaddress.com"> <!-- Change value to your own message subject -->
+									<input type="hidden" name="project_name" value="bhoff5.github.io"> 
+									<input type="hidden" name="admin_email" value="BrianLHoff@gmail.com"> 
+									<input type="hidden" name="form_subject" value="Message from Brian's Portfolio"> 
 									<!-- End Hidden Required Fields -->
 
 									<div class="tt-row">
