--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
 								<form id="tt-contact-form" class="tt-form-lg tt-form-minimal tt-hide-labels anim-fadeinup">
 
 									<!-- Begin hidden required fields (https://github.com/agragregra/uniMail) -->
-									<input type="hidden" name="project_name" value="bhoff5.github.io"> 
+									<input type="hidden" name="project_name" value="https://bhoff5.github.io/"> 
 									<input type="hidden" name="admin_email" value="BrianLHoff@gmail.com"> 
 									<input type="hidden" name="form_subject" value="Message from Brian's Portfolio"> 
 									<!-- End Hidden Required Fields -->
