--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 
 		<!-- Title -->
-		<title>Brian Hoff -- Portfolio</title>
+		<title>Brian Hoff - Portfolio</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
