updating contact section

--- a/index.html
+++ b/index.html
@@ -720,54 +720,18 @@
 								</div>
 								<!-- End tt-Heading -->
 
-								<!-- Begin form 
-								================ 
+								<!-- Begin page nav 
+								==================== 
 								-->
-								<form id="tt-contact-form" class="tt-form-lg tt-form-minimal tt-hide-labels anim-fadeinup">
+								<div class="tt-page-nav tt-pn-scroll">
+									<a href="https://bhoff5.github.io/assets/Brian_Resume_2023.pdf" target="_blank" class="tt-pn-link anim-fadeinup">
+										<div class="tt-pn-title">Contact Me</div>
+										<div class="tt-pn-hover-title">BrianLHoff@gmail.com</div>
+									</a> <!-- /.tt-pn-link -->
 
-									<!-- Begin hidden required fields (https://github.com/agragregra/uniMail) -->
-									<input type="hidden" name="project_name" value="https://bhoff5.github.io/"> 
-									<input type="hidden" name="admin_email" value="BrianLHoff@gmail.com"> 
-									<input type="hidden" name="form_subject" value="Message from Brian's Portfolio"> 
-									<!-- End Hidden Required Fields -->
-
-									<div class="tt-row">
-										<div class="tt-col-md-6">
-
-											<div class="tt-form-group">
-												<label>Name</label>
-												<input class="tt-form-control" type="text" name="Name" placeholder="Enter your name" required>
-											</div>
-
-										</div> <!-- /.tt-col -->
-
-										<div class="tt-col-md-6">
-
-											<div class="tt-form-group">
-												<label>Email address</label>
-												<input class="tt-form-control" type="email" name="Email" placeholder="Enter your email" required>
-											</div>
-
-										</div> <!-- /.tt-col -->
-									</div> <!-- /.tt-row -->
-
-									<div class="tt-form-group">
-										<label>Subject</label>
-										<input class="tt-form-control" type="text" name="Subject" placeholder="Subject" required>
-									</div>
-
-									<div class="tt-form-group">
-										<label>Message</label>
-										<textarea class="tt-form-control" rows="7" name="Message" placeholder="What's in your mind?" required></textarea>
-										<small class="tt-form-text"><em>* All fields are required!</em></small>
-									</div>
-
-									<div class="tt-btn tt-btn-dark-outline">
-										<button type="submit" data-hover="Send Message">Send Message</button>
-									</div>
-								</form>
-								<!-- End form -->
-
+								</div>
+								<!-- End page nav -->
+							
 							</div> <!-- /.tt-section-inner -->
 						</div>
 						<!-- End tt-section -->
