removing contact heading

--- a/index.html
+++ b/index.html
@@ -714,10 +714,10 @@
 								<!-- Begin tt-Heading 
 								====================== 
 								-->
-								<div class="tt-heading tt-heading-lg margin-bottom-10-p anim-fadeinup">
+<!-- 								<div class="tt-heading tt-heading-lg margin-bottom-10-p anim-fadeinup">
 									<h3 class="tt-heading-subtitle text-gray">Get in Touch</h3>
 									<h2 class="tt-heading-title">Contact Me</h2>
-								</div>
+								</div> -->
 								<!-- End tt-Heading -->
 								<!-- Begin page nav 
 								==================== 
