--- a/index.html
+++ b/index.html
@@ -722,6 +722,21 @@
 								<!-- Begin page nav 
 								==================== 
 								-->
+																<!-- Begin page nav 
+								==================== 
+								-->
+								<div class="tt-page-nav tt-pn-scroll">
+									<a href="https://bhoff5.github.io/assets/Brian_Resume_2023.pdf" target="_blank" class="tt-pn-link anim-fadeinup">
+										<div class="tt-pn-title">Download Resume</div>
+										<div class="tt-pn-hover-title">Download Resume</div>
+									</a> <!-- /.tt-pn-link -->
+
+									<!-- Use if destination page contains page header image -->
+									<div class="tt-pn-image">
+										<img src="assets/img/logo-dark.png" alt="image">
+									</div>
+								</div>
+								<!-- End page nav -->
 								<div class="tt-page-nav tt-pn-scroll">
 									<a href="https://bhoff5.github.io/assets/Brian_Resume_2023.pdf" target="_blank" class="tt-pn-link anim-fadeinup">
 										<div class="tt-pn-title">Contact Me</div>
