removing old resume section

--- a/index.html
+++ b/index.html
@@ -651,8 +651,8 @@
 								========================== 
 								-->
 								<div class="tt-scrolling-text scr-text-stroke font-italic" data-scroll-speed="30">
-									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - ">
-										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - 
+									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - Accessibility - ">
+										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - Accessibility - 
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
@@ -661,8 +661,8 @@
 								========================== 
 								-->
 								<div class="tt-scrolling-text scr-text-stroke scr-text-reverse font-italic" data-scroll-speed="30">
-									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - ">
-										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - 
+									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - Accessibility - ">
+										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - Accessibility - 
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
@@ -671,37 +671,7 @@
 						</div>
 						<!-- End tt-section -->
 
-						<!-- =======================
-						///// Begin tt-section /////
-						============================ 
-						
-						-->
-						<div class="tt-section tt-section-5 padding-bottom-100">
-							<div class="tt-section-inner tt-wrap">
-
-								<!-- Begin page nav 
-								==================== 
-								-->
-								<div class="tt-page-nav tt-pn-scroll">
-									<a href="https://bhoff5.github.io/assets/Brian_Resume_2023.pdf" target="_blank" class="tt-pn-link anim-fadeinup">
-										<div class="tt-pn-title">Resume</div>
-										<div class="tt-pn-hover-title">Download Resume</div>
-									</a> <!-- /.tt-pn-link -->
-
-									<!-- Use if destination page contains page header image -->
-									<div class="tt-pn-image">
-										<img src="assets/img/logo-dark.png" alt="image">
-									</div>
-								</div>
-								<!-- End page nav -->
-
-							</div> <!-- /.tt-section-inner -->
-						</div>
-						<!-- End tt-section -->
-
-
-					</div>
-					<!-- End page content -->
+	
 
 						<!-- =======================
 						///// Begin tt-section /////
@@ -738,7 +708,7 @@
 								</div>
 								<!-- End page nav -->
 								<div class="tt-page-nav tt-pn-scroll">
-									<a href="https://bhoff5.github.io/assets/Brian_Resume_2023.pdf" target="_blank" class="tt-pn-link anim-fadeinup">
+									<a href="mailto:BrianLHoff@gmail.com" target="_blank" class="tt-pn-link anim-fadeinup">
 										<div class="tt-pn-title">Contact Me</div>
 										<div class="tt-pn-hover-title">BrianLHoff@gmail.com</div>
 									</a> <!-- /.tt-pn-link -->
