--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
 								-->
 								<div class="tt-page-nav tt-pn-scroll">
 									<a href="https://bhoff5.github.io/assets/Brian_Resume_2023.pdf" target="_blank" class="tt-pn-link anim-fadeinup">
-										<div class="tt-pn-title">Download Resume</div>
+										<div class="tt-pn-title">Resume</div>
 										<div class="tt-pn-hover-title">Download Resume</div>
 									</a> <!-- /.tt-pn-link -->
 
