--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 										<div class="pli-inner">
 
 											<div class="pli-image-col">
-												<a href="https://bhoff5.github.io/clicky-game/" class="pli-image-link"data-cursor="View<br>Site">
+												<a href="https://bhoff5.github.io/clicky-game/" class="pli-image-link"data-cursor="Launch<br>Site">
 													<div class="pli-image-holder anim-zoomin">
 														
 														<figure class="pli-image">
@@ -464,7 +464,7 @@
 										<div class="pli-inner">
 
 											<div class="pli-image-col">
-												<a href="https://bhoff5.github.io/TriviaGame/" class="pli-image-link"data-cursor="View<br>Site">
+												<a href="https://bhoff5.github.io/TriviaGame/" class="pli-image-link"data-cursor="Launch<br>Site">
 													<div class="pli-image-holder anim-zoomin">
 														
 														<figure class="pli-image">
