updating scroll text

--- a/index.html
+++ b/index.html
@@ -651,8 +651,10 @@
 								========================== 
 								-->
 								<div class="tt-scrolling-text scr-text-stroke font-italic" data-scroll-speed="30">
-									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - Accessibility - ">
-										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - Accessibility - 
+									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor React - - Canvas - Bootstrap - Google Analytics - TypeScript - 
+																    
+																    ibility - ">
+										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
@@ -661,8 +663,8 @@
 								========================== 
 								-->
 								<div class="tt-scrolling-text scr-text-stroke scr-text-reverse font-italic" data-scroll-speed="30">
-									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - Accessibility - ">
-										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - Canvas - Bootstrap - Google Analytics - Accessibility - 
+									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - ">
+										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
