--- a/index.html
+++ b/index.html
@@ -191,9 +191,7 @@
 
 										<div class="text-xxlg font-alter">
 											<p class="anim-fadeinup">
-												Shopify/Shopify Plus developer. Formerly a technical writer in the food industry.
-												Full-stack capabilities with an emphasis on front-end, Javascript, UI/UX, and
-												e-commerce.
+												Shopify/Shopify Plus developer. Full-stack capabilities with an emphasis on custom theme and section building, Javascript, CSS, integrations, UI/UX, and e-commerce development.
 											</p>
 										</div>
 
@@ -541,7 +539,7 @@
 									<div class="portfolio-interactive-item anim-skewinup" data-scroll-speed="2">
 										<div href="single-project-2.html" class="pi-item-title-link">
 											<h2 class="pi-item-title">Shopify Plus</h2>
-											<div class="pi-item-hover-title">Shopify Plus</div>
+											<div class="pi-item-hover-title">Theme Building - 2.0 Themes - Shopify Admin</div>
 										</div>
 								
 										<figure class="pi-item-image cover-opacity-2">
@@ -654,7 +652,7 @@
 									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor React - - Canvas - Bootstrap - Google Analytics - TypeScript - 
 																    
 																    ibility - ">
-										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
+										SCSS - SEO - Greensock - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
@@ -664,7 +662,7 @@
 								-->
 								<div class="tt-scrolling-text scr-text-stroke scr-text-reverse font-italic" data-scroll-speed="30">
 									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - ">
-										SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
+										SCSS - SEO - Greensock - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
