--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
 									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor React - - Canvas - Bootstrap - Google Analytics - TypeScript - 
 																    
 																    ibility - ">
-										SCSS - SEO - Greensock - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
+										SCSS - SEO - Tailwind - Greensock - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
@@ -662,7 +662,7 @@
 								-->
 								<div class="tt-scrolling-text scr-text-stroke scr-text-reverse font-italic" data-scroll-speed="30">
 									<div class="tt-scrolling-text-inner text-dark-3" data-text="SCSS - SEO - Greensock Animations - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - ">
-										SCSS - SEO - Greensock - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
+										SCSS - SEO - Tailwind - Greensock - Illustrator - Photoshop - Ruby Script Editor - React - Canvas - Bootstrap - Google Analytics - Accessibility - TypeScript - 
 									</div> <!-- /.tt-scrolling-text-inner -->
 								</div>
 								<!-- End scrolling text -->
