removing feltory and glob links

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 														<div class="pli-info">
 															<h2 class="pli-title">Feltory</h2> 
 															<div class="pli-categories-wrap">
-																<div class="pli-category">Feltory is one of Graf Lantz's brands. I built the entire Feltory website from scratch, including building the custom Bundle Builder page.</div>
+																<div class="pli-category">Feltory was one of Graf Lantz's brands. I built the entire Feltory website from scratch, including building the custom Bundle Builder page.</div>
 																
 															</div> <!-- /.pli-categories-wrap -->
 														</div> <!-- /.pli-info -->
@@ -301,10 +301,10 @@
 													<div class="pli-counter"></div>
 													<h2 class="pli-title"><a href="https://www.feltory.com"  target="_blank">Feltory</a></h2> 
 													<div class="pli-categories-wrap">
-														<div class="pli-category">Feltory is one of Graf Lantz's brands. I built the entire Feltory website from scratch, including building the custom Bundle Builder page.</div>
-														<div class="tt-btn tt-btn-link">
+														<div class="pli-category">Feltory was one of Graf Lantz's brands. I built the entire Feltory website from scratch, including building the custom Bundle Builder page.</div>
+<!-- 														<div class="tt-btn tt-btn-link">
 															<a href="https://www.feltory.com" target="_blank" data-hover="Launch Site">Launch Site</a>
-														</div>
+														</div> -->
 													</div> <!-- /.pli-categories-wrap -->
 												</div> <!-- /.pli-info -->
 											</div> <!-- /.pli-info-col -->
@@ -336,7 +336,7 @@
 														<div class="pli-info">
 															<h2 class="pli-title">Glob</h2> 
 															<div class="pli-categories-wrap">
-																<div class="pli-category">Glob is one of Graf Lantz's brands. I am responsible for updating and maintaining the Glob website, including building new features.</div>
+																<div class="pli-category">Glob was one of Graf Lantz's brands. I was responsible for updating and maintaining the Glob website, including building new features.</div>
 															
 															</div> <!-- /.pli-categories-wrap -->
 														</div> <!-- /.pli-info -->
@@ -350,10 +350,10 @@
 													<div class="pli-counter"></div>
 													<h2 class="pli-title"><a href="https://www.glob.land"  target="_blank">Glob</a></h2> 
 													<div class="pli-categories-wrap">
-														<div class="pli-category">Glob is one of Graf Lantz's brands. I am responsible for updating and maintaining the Glob website, including building new features.</div>
-														<div class="tt-btn tt-btn-link">
+														<div class="pli-category">Glob was one of Graf Lantz's brands. I was responsible for updating and maintaining the Glob website, including building new features.</div>
+<!-- 														<div class="tt-btn tt-btn-link">
 															<a href="https://www.glob.land" target="_blank" data-hover="Launch Site">Launch Site</a>
-														</div>
+														</div> -->
 													</div> <!-- /.pli-categories-wrap -->
 												</div> <!-- /.pli-info -->
 											</div> <!-- /.pli-info-col -->
