updating portfolio interactive item list

--- a/index.html
+++ b/index.html
@@ -591,6 +591,21 @@
 									</div>
 									<!-- End portfolio interactive item -->
 
+															<!-- Begin portfolio interactive item 
+									====================================== 									
+									-->
+									<div class="portfolio-interactive-item anim-skewinup" data-scroll-speed="3">
+										<div href="single-project-1.html" class="pi-item-title-link">
+											<h2 class="pi-item-title">React</h2>
+											<div class="pi-item-hover-title">React</div>
+										</div>
+								
+										<figure class="pi-item-image cover-opacity-2">
+											<img src="assets/img/logos/jquery-logo.png" alt="image">
+										</figure>
+									</div>
+									<!-- End portfolio interactive item -->
+
 									<!-- Begin portfolio interactive item 
 									====================================== 									
 									-->
