--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
 								==================== 
 								-->
 								<div class="tt-page-nav tt-pn-scroll">
-									<a href="https://bhoff5.github.io/assets/Brian_Resume_2023.pdf" target="_blank" class="tt-pn-link anim-fadeinup">
+									<a href="https://bhoff5.github.io/assets/Brian Hoff Resume - 2025.pdf" target="_blank" class="tt-pn-link anim-fadeinup">
 										<div class="tt-pn-title">Résumé</div>
 										<div class="tt-pn-hover-title">Download Résumé</div>
 									</a> <!-- /.tt-pn-link -->
@@ -817,3 +817,4 @@
 	</body>
 
 </html>
+
